kube/base/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecounter-server
  namespace: kubecounter
  labels:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: api	
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubecounter
      app.kubernetes.io/component: api

  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubecounter
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: kubecounter-server
          image: mmaous/kubecounter:server-v2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /counters
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 40
          
          readinessProbe:
            httpGet:
              path: /counters
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 20
