kube/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecounter-api-svc
  namespace: kubecounter
  labels:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: api
spec:
  type: ClusterIP

  ports:
    - port: 8080
      targetPort: 8080

  selector:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: api
